--- a/Views/Dashboard/Admin/Index.cshtml
+++ b/Views/Dashboard/Admin/Index.cshtml
@@ -42,11 +42,11 @@
         <!-- Sidebar -->
         <div class="sidebar">
             <h4 class="text-center py-3">Admin Panel</h4>
-            <a href="#">Dashboard</a>
-            <a href="#">Manage Users</a>
-            <a href="#">Manage Volunteers</a>
-            <a href="#">Reports</a>
-            <a href="#">Settings</a>
+            <a href="#">All Users</a>
+            <a href="#">All Affected Areas</a>
+            <a href="#">All Relief Centers</a>
+            <a href="#">All Aid Requests</a>
+            <a href="#">Aid Preparation</a>
             <a href="/auth/logout">Logout</a>
         </div>
 
