--- a/Views/AuthApi/Register.cshtml
+++ b/Views/AuthApi/Register.cshtml
@@ -2,17 +2,17 @@
     ViewData["Title"] = "Sign Up";
 }
 <!-- Loader -->
-<div id="loader" class="d-flex justify-content-center align-items-center vh-100" style="display:none;">
+@* <div id="loader" class="d-flex justify-content-center align-items-center vh-100" style="display:none;">
     <div class="spinner-border text-primary" role="status">
         <span class="visually-hidden">Checking login...</span>
     </div>
-</div>
+</div> *@
 
 <!-- Form Container -->
 
- <div id="form-container" class="container mt-4" style="max-width: 500px; display:none;">
+@* <div id="form-container" class="container mt-4" style="max-width: 500px; display:none;"> *@
     <h2 class="text-center mt-4">Create Account</h2>
-
+<div  class="container mt-4" style="max-width: 500px;">
     <form id="signupForm" method="post" action="/api/AuthApi/register">
         <div class="mb-3">
             <label class="form-label">Name</label>
@@ -34,10 +34,10 @@
             <input type="password" name="password" class="form-control" required />
         </div>
 
-         <div class="mb-3">
+        <div class="mb-3">
             <label class="form-label">Confirm Password</label>
             <input type="password" name="confirmPassword" class="form-control" required />
-        </div> 
+        </div>
 
         <div class="form-check mb-3">
             <input class="form-check-input" type="checkbox" id="isVolunteer" />
